syntax = "proto3";

option java_package = "com.example.grpc";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message SignupRequest {
  string email = 1;
  string password = 2;
}

message SignupResponse {
  bool success = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  string id = 1;
}

service AuthService {
  rpc signup (SignupRequest) returns (SignupResponse) {}
  rpc login (LoginRequest) returns (LoginResponse) {}
  rpc validateToken (ValidateRequest) returns (ValidateResponse) {}
}
